# FullStack-Todo-app

./: .gitignore  CHATBOT_FEATURE_README.md  QWEN.md  README.md  docker-compose.yml  start_app.bat
.qwen/agents/: auth-agent.md  fastapi-backend-agent.md  neon-db-agent.md  nextjs-frontend-architect.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  (+1 more)
backend/: README.md  add_priority_column.py  alembic.ini  check_tables.py  check_versions.py  debug_server.py  dockerfile  initialize_db.py  main.py  pyproject.toml  requirements.txt  test_db.py  test_signup_endpoint.py  test_user_creation.py
backend/alembic/: env.py  env_backup.py
backend/alembic/versions/: 001_initial_task_table.py  002_add_priority_column.py  003_add_users_table.py
backend/app/: main.py
backend/app/core/: settings.py
backend/app/db/: base.py  database.py  session.py
backend/app/models/: task.py  user.py
backend/app/repositories/: task_repository.py  user_repository.py
backend/app/routers/: auth.py  tasks.py
backend/app/schemas/: task.py  user.py
backend/app/services/: task_service.py  user_service.py
backend/app/utils/: exceptions.py
frontend/: .dockerignore  .eslintrc.json  .gitignore  DASHBOARD_FEATURES.md  README.md  dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  test-chatbot-commands-with-names.js  test-chatbot-commands.js  vercel.json
k8s/: backend-deployment.yaml  frontend-deployment.yaml
mcp/: add-task-tool.ts  complete-task-tool.ts  delete-task-tool.ts  read-task-tool.ts  update-task-tool.ts
(+89 files in other folders)
